# axon_cluster

./: .env.example  .gitignore  Cargo.toml  README.md  WEB_UI.md  generate_key.sh  start_web.sh
src/: cli.rs  http_server.rs  main.rs  ollama.rs  protocol.rs
web-app/: package-lock.json  package.json
web-app/src/components/: ChatWindow.jsx  InputArea.jsx  MessageBubble.jsx  StatusIndicator.jsx
