[package]
name = "axon_cluster"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53", features = [
    "tcp",
    "dns",
    "noise",
    "yamux",
    "mdns",
    "request-response",
    "json",
    "macros",
    "tokio",
    "pnet",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
anyhow = "1.0.100"
futures = "0.3"
async-trait = "0.1"
dotenv = "0.15"
